--- a/raon-control/test.html
+++ b/raon-control/test.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="test.css">
+<body>
 
-<body style="background-color:black">
+<p>Click the button to replace "Microsoft" with "W3Schools" in the paragraph below:</p>
 
-<style> 
-	.member-box {
-		width: 800px;
-		height: 300px;
-		background-color: dodgerblue;
-		padding: 5px;
-	}
+<p class="demo">Visit Microsoft!</p>
+<p class="demo">Visit Microsoft!</p>
 
-	.avatar {
-		width: 100px;
-		height: 100px;
-		background-color: red;
-		color: white;
-		display: inline-block;
-	}
 
-	.member-info {
-		width: 400px;
-		height: 100px;
-		background-color: green;
-		color: white;
-		display: inline-block;
-	}
+<button onclick="myFunction()">Try it</button>
 
-	.member-work {
-		width: 504px;
-		height: 150px;
-		background-color: #1d1d1d;
-		color: white;
-	}
-</style>
-
-	<div class="member-box">
-		<div class="avatar">
-
-		</div>
-		<div class="member-info">
-
-		</div>
-		<div class="member-work">
-
-		</div>
-	</div>
-<body>		
 <script>
+        var svgCodeDesk1 = '<svg class="desk1" width="37.6749" height="6.1317" viewBox="0 0 37.6749 6.1317"><style>#desk1-1{fill:#e6e6e6;}#desk1-2{fill:#e6e6e6;}#desk1-3{fill:#e6e6e6;}</style><path id="desk1-1" d="M7.4417,5.839a11.6573,11.6573,0,0,1,5.0929,1.2269h1.1863V.9341H1.1626V7.0659H2.3488A11.6573,11.6573,0,0,1,7.4417,5.839" transform="translate(-1.1626 -0.9341)"/><path id="desk1-2" d="M20,5.839a11.6573,11.6573,0,0,1,5.0929,1.2269h1.1862V.9341H13.7209V7.0659h1.1862A11.6573,11.6573,0,0,1,20,5.839" transform="translate(-1.1626 -0.9341)"/><path id="desk1-3" d="M32.5583,5.839a11.6573,11.6573,0,0,1,5.0929,1.2269h1.1862V.9341H26.2791V7.0659h1.1863A11.6573,11.6573,0,0,1,32.5583,5.839" transform="translate(-1.1626 -0.9341)"/></svg>';
+        
+function myFunction() {
+        
+  var deskOldColor = "desk1-1{fill:#e6e6e6;}";
+  var deskNewColor = "desk1-1{fill:#3498DB;}";
+  
+  svgCode = svgCodeDesk1.replace(deskOldColor, deskNewColor);
+  svgCode = svgCode.replace(/desk1-1/g, "shift1-1");
+  svgCode = svgCode.replace(/desk1-2/g, "shift1-2");
+  svgCode = svgCode.replace(/desk1-3/g, "shift1-3");
 
+
+  document.getElementsByClassName("demo")[0].innerHTML = svgCode;
+
+  deskOldColor = "desk1-2{fill:#e6e6e6;}";
+  deskNewColor = "desk1-2{fill:#3498DB;}";
+
+
+  svgCode = svgCodeDesk1.replace(deskOldColor, deskNewColor);
+  console.log(svgCode);
+
+  var deskID = "desk1-1";
+  var shiftID = "shift2-1";
+  for(let i=1; i<=3; i++) {
+	  deskID = "desk1-" + i;
+	  shiftID = "shift2-" + i;
+	//   svgCode = svgCode.replace(/deskID/g, shiftID);
+	  svgCode = svgCode.split(deskID).join(shiftID);
+
+  }
+
+  console.log(svgCode);
+  
+  document.getElementsByClassName("demo")[1].innerHTML = svgCode;
+
+//   console.log(svgCode2);
+
+
+}
 </script>
 
 </body>
-
 </html>
