--- a/raon-control/downloads.html
+++ b/raon-control/downloads.html
@@ -60,7 +60,7 @@
         font-size: 40px;
         text-align: center;
         color: white;
-        font-family: Helvetica-Neue-Light;
+        font-family: Roboto-Light;
     }
 
     .body-box {
@@ -75,7 +75,7 @@
         justify-content: center;
         align-items: center;
         background-color: black;
-        font-family: Helvetica-Neue-Light;
+        font-family: Roboto-Light;
     }
 
     .download-box {
