Download page update

--- a/raon-control/downloads.html
+++ b/raon-control/downloads.html
@@ -67,6 +67,10 @@
         width: 1920px;
         height: 960px;
         background-color: black;
+        background-image: url('images/background-img.png');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center;
         margin: auto;
     }
 
@@ -74,7 +78,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: black;
+        /* background-color: black; */
         font-family: Roboto-Light;
     }
 
