--- a/raon-control/test.html
+++ b/raon-control/test.html
@@ -3,8 +3,10 @@
   body {
     background-color: black;
     background-image: url('images/background-img.png');
+    background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: 3840px 2160px;
+    background-position: center;
+    /* background-size: 3840px 2160px; */
   }
 </style>
 <html>
